k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-workflow
  namespace: hackathon
  labels:
    app: video-workflow-app
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: video-workflow-app

  template:
    metadata:
      labels:
        app: video-workflow-app

    spec:
      serviceAccountName: video-workflow
      terminationGracePeriodSeconds: 30

      containers:
        - name: video-workflow-app
          image: public.ecr.aws/p6c0d2v5/fiap-hackathon:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080

          # 🔐 Variáveis vindas do Secret criado pelo Terraform
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"

          # ==============================
          # HEALTH CHECKS
          # ==============================
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
