k8s/app/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-workflow-route
  namespace: hackathon
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hackathon/v1/video-workflow
            pathType: Prefix
            backend:
              service:
                name: video-workflow-service
                port:
                  number: 80
